// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs consistent-indexed-object-style.mdx code examples ESLint output 1`] = `
"Incorrect
Options: "record"

interface IndexSignatureInterface {
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ A record is preferred over an index signature.
  [key: string]: unknown;
~~~~~~~~~~~~~~~~~~~~~~~~~
}
~

type IndexSignatureType = {
                          ~ A record is preferred over an index signature.
  [key: string]: unknown;
~~~~~~~~~~~~~~~~~~~~~~~~~
};
~

type MappedType = {
                  ~ A record is preferred over an index signature.
  [key in string]: unknown;
~~~~~~~~~~~~~~~~~~~~~~~~~~~
};
~
"
`;

exports[`Validating rule docs consistent-indexed-object-style.mdx code examples ESLint output 2`] = `
"Correct
Options: "record"

type RecordType = Record<string, unknown>;
"
`;

exports[`Validating rule docs consistent-indexed-object-style.mdx code examples ESLint output 3`] = `
"Incorrect
Options: "index-signature"

type RecordType = Record<string, unknown>;
                  ~~~~~~~~~~~~~~~~~~~~~~~ An index signature is preferred over a record.
"
`;

exports[`Validating rule docs consistent-indexed-object-style.mdx code examples ESLint output 4`] = `
"Correct
Options: "index-signature"

interface IndexSignatureInterface {
  [key: string]: unknown;
}

type IndexSignatureType = {
  [key: string]: unknown;
};

type MappedType = {
  [key in string]: unknown;
};
"
`;
